# ssh-trader

./: .gitignore  .pre-commit-config.yaml  Agents.md  CHANGELOG.md  PLANS.md  README.md  pyproject.toml
.github/workflows/: validate.yml
docs/: trading_system_spec.md
planning/: INDEX.md  TA-01_data_ingest_multitf.md  TA-02_levels_pivots.md  TA-03_compression_confluence.md  TA-04_bias_triggers.md  TA-05_fsm_signals.md  TA-06_backtest_r_metrics.md  TA-07_live_paper_runner.md  TA-08_walkforward_validation.md
scripts/: build_dashboard.py  dump_ta_features.py  fetch_hyperliquid_history.py  fetch_hyperliquid_multitf.py  resample_ohlcv_csv.py  run_dashboard.sh  run_e2e_hyperliquid.sh  run_gitleaks_precommit.sh  run_trivy_fs.sh  serve_dashboard.py  validate.sh
src/ssh_trader/: __init__.py
src/ssh_trader/backtest/: __init__.py  metrics.py  module.py  run.py  (+1 more)
tests/: test_backtest_simulator.py  test_compression.py  test_control_engine.py  test_data_gaps.py  test_data_layer.py  test_guidance_policy.py  test_hyperliquid_history.py  test_hyperliquid_stub.py  test_indicators.py  test_placeholders.py  test_regime.py  test_resample_alignment.py  test_risk_governor.py  test_shadow_runner.py  test_ta_levels.py
trading-dashboard/: package copy.json  package-lock.json  package.json  tailwind.config copy.ts  tailwind.config.ts
trading-dashboard/app/: globals.css  layout.tsx  page.tsx
trading-dashboard/components/: ChartCard.tsx  LoadingSpinner.tsx  Navbar.tsx  RegimeBadge.tsx  TableCard.tsx
trading-dashboard/data/: backtest.csv
trading-dashboard/lib/: api.ts  types.ts
(+43 files in other folders)
